<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SpeechToText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:ems="30"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/input_here"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="20"
        android:maxLength="3000"
        android:overScrollMode="always"
        android:scrollbarStyle="outsideOverlay"
        android:textAlignment="center"
        android:textColor="@color/scarlet"
        android:textColorHint="@color/coal"
        android:textCursorDrawable="@color/coal"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="normal"
        android:autofillHints="@string/speech_input"
        tools:targetApi="o"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save"
        android:tint="@color/coal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/floppy" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96">

        <Button
            android:id="@+id/speechBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:width="200dp"
            android:height="200dp"
            android:background="@drawable/microphone" />

        <TextView
            android:id="@+id/actionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/hold_the_mic_and_speak"
            android:textAlignment="center"
            android:textColor="@color/coal"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>